# sre-agent

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: config_db.rs  lib.rs  main.rs  state.rs
src/agent/: loop_runner.rs  memory.rs  mod.rs  prompt.rs  skill_store.rs  skills.rs  stream.rs  tools.rs
src/agent/built_in/: anomalies.rs  argocd_tool.rs  deploys.rs  kube_tool.rs  logs.rs  metrics.rs  mod.rs  services.rs  skills_tool.rs  traces.rs
src/models/: anomaly.rs  custom_skills.rs  mod.rs
tests/: loop_runner_mock.rs
